--- a/app/views/playlists/_playlist_preview.html.erb
+++ b/app/views/playlists/_playlist_preview.html.erb
@@ -3,7 +3,7 @@
     <p class="text-center font-bold">作成中のプレイリスト ※5~20曲まで</p>
     <% @playlist.tracks.each do |track| %>
       <%= turbo_frame_tag dom_id(track) do %>
-        <div class="flex justify-between items-center mb-2">
+        <div class="flex items-center justify-between mb-2">
           <%= render "playlists/track_with_remove_button", track: track %>
         </div>
       <% end %>
