--- a/app/views/playlists/_track.html.erb
+++ b/app/views/playlists/_track.html.erb
@@ -1,6 +1,5 @@
-<div id="<%= dom_id(track) %>" class="flex justify-start items-center mb-2 gap-x-4">
-  <div class="flex-grow m-1 w-full md:w-1/2 lg:w-2/3">
-      <iframe src="https://open.spotify.com/embed/track/<%= track.spotify_id %>" width="100%" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+<div id="<%= dom_id(track) %>" class="mb-2 flex items-center justify-start gap-x-4">
+  <div class="m-1 w-full flex-grow md:w-1/2 lg:w-2/3">
+    <iframe src="https://open.spotify.com/embed/track/<%= track.spotify_id %>" width="100%" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
   </div>
 </div>
-
