--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,12 +1,11 @@
-<footer class="footer p-10 text-base-content flex flex-col items-center">
-  <div class="footer-links flex flex-col md:flex-row justify-center gap-2 sm:gap-4 md:gap-8 text-slate-600 mb-4">
+<footer class="flex flex-col items-center p-10 text-base-content">
+  <div class="mb-4 flex flex-col justify-center gap-2 text-slate-600 md:flex-row sm:gap-4 md:gap-8">
     <%= link_to 'お問い合わせ', 'https://forms.gle/BL9XpXKsqMpg4zgJA', class: 'text-xs sm:text-sm md:text-base' %>
-    <%= link_to '利用規約', terms_path, class: 'text-xs sm:text-sm md:text-base' %> 
+    <%= link_to '利用規約', terms_path, class: 'text-xs sm:text-sm md:text-base' %>
     <%= link_to 'プライバシーポリシー', privacy_policy_path, class: 'text-xs sm:text-sm md:text-base' %>
     <%= link_to 'アップデート情報', update_info_path, class: 'text-xs sm:text-sm md:text-base' %>
   </div>
   <aside class="text-center">
-    <p class="text-slate-500 text-xs sm:text-sm md:text-base">Copyright © 2024 - All right reserved by Mutro</p>
+    <p class="text-xs text-slate-500 sm:text-sm md:text-base">Copyright © 2024 - All rights reserved by Mutro</p>
   </aside>
 </footer>
-
