--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -16,9 +16,9 @@
     </div>
   </div>
 </div>
-<div class="container mx-auto px-4 max-w-4xl">
+<div class="container mx-auto max-w-4xl px-4">
   <div class="section my-10 p-6 bg-base-100 rounded-lg shadow-md">
-    <h2 class="text-2xl font-black text-center text-primary mb-4">未ログイン時でも使える機能</h2>
+    <h2 class="mb-4 text-2xl font-black text-center text-primary">未ログイン時でも使える機能</h2>
     <p class="text-lg text-gray-600">
       ・プレイリスト一覧<br>
       ・プレイリスト詳細<br>
@@ -26,7 +26,7 @@
   </div>
 
   <div class="section my-10 p-6 bg-base-100 rounded-lg shadow-md">
-    <h2 class="text-2xl font-black text-center text-primary mb-4">ログイン時の追加機能</h2>
+    <h2 class="mb-4 text-2xl font-black text-center text-primary">ログイン時の追加機能</h2>
     <p class="text-lg text-gray-600">
       ・リリース（プレイリスト作成）機能<br>
       ・プレイリスト編集<br>
@@ -43,7 +43,7 @@
   </div>
 
   <div class="section my-10 p-6 bg-base-100 rounded-lg shadow-md">
-    <h2 class="text-2xl font-black text-center text-accent mb-4">プレイリストをリリースするには？</h2>
+    <h2 class="mb-4 text-2xl font-black text-center text-accent">プレイリストをリリースするには？</h2>
     <p class="text-lg text-gray-600">
       1：ヘッダーの"リリース"をクリック<br>
       2: 曲検索フォームにアーティスト名や曲名を入力<br>
