--- a/app/views/static_pages/update_info.html.erb
+++ b/app/views/static_pages/update_info.html.erb
@@ -1,29 +1,19 @@
 <div class="container mx-auto px-4 max-w-4xl text-slate-600">
-  <style>
-    .section {
-      margin: 2.5rem 0;
-      padding: 1.5rem;
-      border-radius: 0.5rem;
-      box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
-    }
-  </style>
-
-  <div class="section">
-    <h2 class="text-xl font-bold text-center mb-4">2024/02/13 Tue.</h2>
-    <p class="text-lg">
-      ✔︎ レコメンド機能"トレンド"を実装しました。<br>
-    </p>
-  </div>
-  
-
-  <div class="section">
+  <div class="my-10 p-6 bg-white rounded-lg shadow-md">
     <h2 class="text-xl font-bold text-center mb-4">2024/02/13 Tue.</h2>
     <p class="text-lg">
       ✔︎ レコメンド機能"トレンド"を実装しました。<br>
     </p>
   </div>
 
-  <div class="section">
+  <div class="my-10 p-6 bg-white rounded-lg shadow-md">
+    <h2 class="text-xl font-bold text-center mb-4">2024/02/13 Tue.</h2>
+    <p class="text-lg">
+      ✔︎ レコメンド機能"トレンド"を実装しました。<br>
+    </p>
+  </div>
+
+  <div class="my-10 p-6 bg-white rounded-lg shadow-md">
     <h2 class="text-xl font-bold text-center mb-4">2024/01/31 Wed.</h2>
     <p class="text-lg">
       ✔︎ Googleログイン機能を実装しました。<br>
@@ -34,14 +24,14 @@
     </p>
   </div>
 
-  <div class="section">
+  <div class="my-10 p-6 bg-white rounded-lg shadow-md">
     <h2 class="text-xl font-bold text-center mb-4">2024/01/25 Thu.</h2>
     <p class="text-lg">
       ✔︎ オートコンプリートで表示された検索候補の選択を上下矢印キーで行えるようにしました。<br>
     </p>
   </div>
 
-  <div class="section">
+  <div class="my-10 p-6 bg-white rounded-lg shadow-md">
     <h2 class="text-xl font-bold text-center mb-4">2024/01/24 Wed.</h2>
     <p class="text-lg">
       ✔︎ 曲検索フォームにオートコンプリート機能を追加しました。<br>
@@ -49,12 +39,10 @@
     </p>
   </div>
 
-  <div class="section">
+  <div class="my-10 p-6 bg-white rounded-lg shadow-md">
     <h2 class="text-xl font-bold text-center mb-4">2024/01/22 Mon.</h2>
     <p class="text-lg text-center">
       🎸 Mutro（ミュトロ）をMVPリリースしました。<br>
     </p>
   </div>
-
 </div>
-
