--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,14 +1,14 @@
-<div class="container mx-auto px-4 py-8 text-slate-600">
-  <div class="flex flex-col md:flex-row items-center md:items-start md:space-x-6 mb-8">
+<div class="container px-4 py-8 mx-auto text-slate-600">
+  <div class="flex flex-col items-center mb-8 md:flex-row md:items-start md:space-x-6">
     <div class="flex flex-col items-center">
-      <div class="w-24 h-24 rounded-full flex items-center justify-center border-2 border-gray-300 mb-4">
+      <div class="flex items-center justify-center w-24 h-24 mb-4 border-2 border-gray-300 rounded-full">
         Icon
       </div>
       <h1 class="text-2xl font-bold"><%= current_user.name %></h1>
     </div>
     <div class="flex-1 md:ml-6">
-      <p class="font-bold mb-4">About Me</p>
-      <div class="bg-slate-100 shadow-lg p-4 mb-4">
+      <p class="mb-4 font-bold">About Me</p>
+      <div class="p-4 mb-4 bg-slate-100 shadow-lg">
         <% if current_user.bio.present? %>
           <%= simple_format(current_user.bio) %>
         <% else %>
@@ -23,4 +23,3 @@
     </div>
   </div>
 </div>
-
