--- a/app/views/playlists/_playlist.html.erb
+++ b/app/views/playlists/_playlist.html.erb
@@ -1,13 +1,13 @@
 <%= link_to playlist_path(playlist) do %>
-  <div class="bg-slate-50 outline outline-1 outline-primary shadow-lg rounded-lg p-2 h-auto m-1 flex flex-col transition-transform duration-300 hover:-translate-y-2 hover:rotate-[-3deg]">
-    <div class="text-center m-2">
+  <div class="m-1 flex flex-col rounded-lg bg-slate-50 p-2 h-auto shadow-lg outline outline-1 outline-primary transition-transform duration-300 hover:-translate-y-2 hover:rotate-[-3deg]">
+    <div class="m-2 text-center">
       <% if playlist.mood && playlist.mood.image_filename %>
-        <%= image_tag(playlist.mood.image_filename, class: "w-3/4 h-auto mx-auto") %>
+        <%= image_tag(playlist.mood.image_filename, class: "mx-auto w-3/4 h-auto") %>
       <% else %>
-        <%= image_tag('default-playlist-image.png', class: "w-3/4 h-auto mx-auto") %>
+        <%= image_tag('default-playlist-image.png', class: "mx-auto w-3/4 h-auto") %>
       <% end %>
     </div>
-    <h2 class="text-center text-sm font-bold text-secondary mb-2">
+    <h2 class="mb-2 text-center text-sm font-bold text-secondary">
       <%= playlist.title %>
     </h2>
     <div class="text-xs text-slate-500">
