--- a/app/views/playlists/new_releases.html.erb
+++ b/app/views/playlists/new_releases.html.erb
@@ -1,6 +1,7 @@
 <div class="container mx-auto px-4">
-  <h1 class="text-xl font-bold text-primary border-b border-primary text-center my-8">新着リリース</h1>
-  <div class="grid grid-cols-1 md:grid-cols-4 gap-4 mb-8">
+  <h1 class="my-8 text-center text-xl font-bold text-primary border-b border-primary">新着リリース</h1>
+
+  <div class="mb-8 grid grid-cols-1 gap-4 md:grid-cols-4">
     <% @playlists.each do |playlist| %>
       <%= render 'playlists/playlist', playlist: playlist %>
     <% end %>
@@ -10,4 +11,3 @@
 <div class="flex justify-center text-gray-600">
   <%= paginate @playlists %>
 </div>
-
