--- a/app/views/playlists/todays_picks.html.erb
+++ b/app/views/playlists/todays_picks.html.erb
@@ -1,7 +1,7 @@
 <div class="container mx-auto px-4">
-  <h1 class="text-xl font-bold text-primary border-b border-primary text-center my-8">今日のレコメンド</h1>
-  
-  <div class="grid grid-cols-1 md:grid-cols-4 gap-4 mb-16">
+  <h1 class="my-8 text-center text-xl font-bold text-primary border-b border-primary">今日のレコメンド</h1>
+
+  <div class="mb-16 grid grid-cols-1 gap-4 md:grid-cols-4">
     <% @playlists.each do |playlist| %>
       <%= render 'playlists/playlist', playlist: playlist %>
     <% end %>
