--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -1,10 +1,10 @@
 <% if flash[:notice] %>
-  <div class="p-4 mt-3 mb-4 mx-3 text-sm bg-success font-bold rounded-lg" role="alert">
+  <div class="mx-3 mt-3 mb-4 p-4 text-sm font-bold bg-success rounded-lg" role="alert">
     <%= flash[:notice] %>
   </div>
 <% end %>
 <% if flash[:alert] %>
-  <div class="p-4 mt-3 mb-4 mx-3 text-sm bg-error font-bold rounded-lg" role="alert">
+  <div class="mx-3 mt-3 mb-4 p-4 text-sm font-bold bg-error rounded-lg" role="alert">
     <%= flash[:alert] %>
   </div>
 <% end %>
