--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,43 +1,51 @@
 <div class="navbar bg-base-100 border-b border-primary h-24 w-full">
-  <div class="flex justify-between items-center w-full">
+  <div class="flex items-center justify-between w-full">
     <div class="ml-4">
       <%= link_to image_tag('mutro_logo.png', width: 110), root_path %>
     </div>
 
     <% if user_signed_in? %>
       <div class="flex-1"></div>
-      <div class="flex flex-col md:flex-row items-center gap-3">
-        <%= link_to 'Mutroの使い方', about_path, class: 'text-primary font-black' %>
+      <div class="flex flex-col items-center gap-3 md:flex-row">
+        <%= link_to 'Mutroの使い方', about_path, class: 'font-black text-primary' %>
         <%= link_to 'リリース', new_playlist_path, class: "btn btn-sm border-amber-500 text-amber-500 bg-white hover:bg-amber-600 hover:text-white" %>
       </div>
 
       <div class="dropdown dropdown-end">
-        <label tabindex="0" class="mr-4 ml-4">
+        <label tabindex="0" class="ml-4 mr-4">
           <i class="fa-solid fa-2xl fa-bars" style="color: #00a2ae;"></i>
         </label>
-        <ul tabindex="0" class="mt-3 z-[1] p-2 shadow menu menu-sm dropdown-content bg-base-100 border-primary rounded-box w-52">
+        <ul tabindex="0" class="z-[1] mt-3 w-52 menu menu-sm dropdown-content rounded-box bg-base-100 border-primary p-2 shadow">
           <li class="text-base font-bold text-primary">プレイリストメニュー</li>
           <li class="text-primary">
-            <%= link_to 'プレイリスト一覧', root_path, class: "text-primary hover:text-secondary" %>
-          <li class="text-primary">
-            <%= link_to '新着リリース', new_releases_playlists_path, class: "text-primary hover:text-secondary" %>
+            <%= link_to 'プレイリスト一覧', root_path, class: "hover:text-secondary text-primary" %>
           </li>
           <li class="text-primary">
-            <%= link_to 'トレンド', trend_picks_path, class: "text-primary hover:text-secondary" %>
+            <%= link_to '新着リリース', new_releases_playlists_path, class: "hover:text-secondary text-primary" %>
           </li>
           <li class="text-primary">
-            <%= link_to '今日のレコメンド', todays_picks_path, class: "text-primary hover:text-secondary" %>
+            <%= link_to 'トレンド', trend_picks_path, class: "hover:text-secondary text-primary" %>
           </li>
-          <li class="text-primary"><%= link_to 'リリースしたプレイリスト', my_playlists_path %></li>
-          <li class="text-primary"><%= link_to 'Good Vibes', good_vibes_user_path(current_user) %></li>
+          <li class="text-primary">
+            <%= link_to '今日のレコメンド', todays_picks_path, class: "hover:text-secondary text-primary" %>
+          </li>
+          <li class="text-primary">
+            <%= link_to 'リリースしたプレイリスト', my_playlists_path, class: "text-primary" %>
+          </li>
+          <li class="text-primary">
+            <%= link_to 'Good Vibes', good_vibes_user_path(current_user), class: "text-primary" %>
+          </li>
           <li class="text-base font-bold text-primary">設定</li>
-          <li><%= link_to 'マイページ', user_path(current_user), class: "text-primary" %></li>
-          <li><%= link_to 'ログアウト', destroy_user_session_path, data: { turbo_method: :delete }, class: "font-bold text-error" %></li>
+          <li class="text-primary">
+            <%= link_to 'マイページ', user_path(current_user), class: "text-primary" %>
+          </li>
+          <li class="text-error font-bold">
+            <%= link_to 'ログアウト', destroy_user_session_path, data: { turbo_method: :delete }, class: "text-error font-bold" %>
+          </li>
         </ul>
       </div>
     <% else %>
-      <%= link_to 'ログインはこちら', new_user_session_path, class: "btn btn-sm btn-outline btn-error mr-4" %>
+      <%= link_to 'ログインはこちら', new_user_session_path, class: "btn btn-outline btn-error btn-sm mr-4" %>
     <% end %>
   </div>
 </div>
-
