--- a/app/views/tracks/_search_results.html.erb
+++ b/app/views/tracks/_search_results.html.erb
@@ -2,14 +2,14 @@
   <div id="search-results">
     <% if @tracks.present? %>
       <div class="mt-4">
-        <h2 class="text-center font-bold text-primary mb-2">検索結果</h2>
+        <h2 class="mb-2 text-center font-bold text-primary">検索結果</h2>
         <div class="flex flex-wrap justify-center">
           <% @tracks.each do |track| %>
             <div class="p-1 md:w-1/3">
               <% if track[:id] %>
                 <div class="flex items-center md:flex-row">
                   <iframe src="https://open.spotify.com/embed/track/<%= track[:id] %>" width="100%" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-                  <%= button_to '追加', add_track_to_playlist_playlists_path(track_id: track[:id]), method: :post, data: { turbo_frame: "playlist_preview" }, class: "btn btn-sm btn-outline btn-primary" %>
+                  <%= button_to '追加', add_track_to_playlist_playlists_path(track_id: track[:id]), method: :post, data: { turbo_frame: "playlist_preview" }, class: "btn btn-outline btn-primary btn-sm" %>
                 </div>
               <% end %>
             </div>
