--- a/app/views/users/good_vibes.html.erb
+++ b/app/views/users/good_vibes.html.erb
@@ -1,7 +1,7 @@
-<div class="container mx-auto px-4">
-  <h1 class="text-xl font-bold text-primary border-b border-primary text-center my-8">MY GOOD VIBES</h1>
-  
-  <div class="grid grid-cols-1 md:grid-cols-4 gap-4 mb-16">
+<div class="container px-4 mx-auto">
+  <h1 class="my-8 text-xl font-bold text-center text-primary border-b border-primary">MY GOOD VIBES</h1>
+
+  <div class="grid grid-cols-1 gap-4 mb-16 md:grid-cols-4">
     <% @good_vibed_playlists.each do |playlist| %>
       <%= render 'playlists/playlist', playlist: playlist %>
     <% end %>
