:recycle: Ref: プレイリスト編集のムード選択をパーシャル化

--- a/app/views/playlists/edit.html.erb
+++ b/app/views/playlists/edit.html.erb
@@ -14,17 +14,7 @@
 
     <%= render 'playlists/tracks_list', playlist: @playlist %>
 
-    <div class="mb-4">
-      <%= f.label :mood, class: "mb-2 block text-lg font-bold text-gray-700" %>
-      <% Mood.all.each do |mood| %>
-        <div class="form-control">
-          <label class="label cursor-pointer">
-            <span class="label-text"><%= mood.name %></span>
-            <%= f.radio_button :mood_id, mood.id, class: "radio #{mood_radio_color(mood.name)}", checked: @playlist.mood_id == mood.id %>
-          </label>
-        </div>
-      <% end %>
-    </div>
+    <%= render 'playlists/mood_selection', f: f %>
 
     <div class="flex items-center justify-between">
       <%= f.submit "更新", class: "btn btn-primary" %>
