:recycle: Ref: iframeをパーシャル化

--- a/app/views/playlists/_track_with_remove_button.html.erb
+++ b/app/views/playlists/_track_with_remove_button.html.erb
@@ -1,6 +1,4 @@
 <div id="<%= dom_id(track) %>" class="mb-2 flex items-center justify-start gap-x-4">
-  <div class="m-1 w-full flex-grow md:w-1/2 lg:w-2/3">
-    <iframe src="https://open.spotify.com/embed/track/<%= track.spotify_id %>" width="100%" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-  </div>
+  <%= render 'spotify_iframe', track: track %>
   <%= link_to '削除', remove_track_from_playlist_playlists_path(track_id: track.id), method: :delete, data: { turbo_method: :delete, turbo_confirm: '本当にこの曲を削除しますか？' }, class: "btn btn-outline btn-error btn-sm" %>
 </div>
