--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -11,7 +11,7 @@
         <%= link_to 'リリース', new_playlist_path, class: "btn btn-sm border-amber-500 text-amber-500 bg-white hover:bg-amber-600 hover:text-white" %>
       </div>
 
-      <div class="dropdown dropdown-end">
+      <div class="dropdown dropdown-end dropdown-hover">
         <label tabindex="0" class="ml-4 mr-4">
           <i class="fa-solid fa-2xl fa-bars" style="color: #00a2ae;"></i>
         </label>
