--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -10,40 +10,7 @@
         <%= link_to 'Mutroの使い方', about_path, class: 'font-black text-primary' %>
         <%= link_to 'リリース', new_playlist_path, class: "btn btn-sm border-amber-500 text-amber-500 bg-white hover:bg-amber-600 hover:text-white" %>
       </div>
-
-      <div class="dropdown dropdown-end dropdown-hover">
-        <label tabindex="0" class="ml-4 mr-4">
-          <i class="fa-solid fa-2xl fa-bars" style="color: #00a2ae;"></i>
-        </label>
-        <ul tabindex="0" class="z-[1] mt-3 w-52 menu menu-sm dropdown-content rounded-box bg-base-100 border-primary p-2 shadow">
-          <li class="text-base font-bold text-primary">プレイリストメニュー</li>
-          <li class="text-primary">
-            <%= link_to 'プレイリスト一覧', root_path, class: "hover:text-secondary text-primary" %>
-          </li>
-          <li class="text-primary">
-            <%= link_to '新着リリース', new_releases_playlists_path, class: "hover:text-secondary text-primary" %>
-          </li>
-          <li class="text-primary">
-            <%= link_to 'トレンド', trend_picks_path, class: "hover:text-secondary text-primary" %>
-          </li>
-          <li class="text-primary">
-            <%= link_to '今日のレコメンド', todays_picks_path, class: "hover:text-secondary text-primary" %>
-          </li>
-          <li class="text-primary">
-            <%= link_to 'リリースしたプレイリスト', my_playlists_path, class: "text-primary" %>
-          </li>
-          <li class="text-primary">
-            <%= link_to 'Good Vibes', good_vibes_user_path(current_user), class: "text-primary" %>
-          </li>
-          <li class="text-base font-bold text-primary">設定</li>
-          <li class="text-primary">
-            <%= link_to 'マイページ', user_path(current_user), class: "text-primary" %>
-          </li>
-          <li class="text-error font-bold">
-            <%= link_to 'ログアウト', destroy_user_session_path, data: { turbo_method: :delete }, class: "text-error font-bold" %>
-          </li>
-        </ul>
-      </div>
+      <%= render'shared/dropdown_menu' %>
     <% else %>
       <%= link_to 'ログインはこちら', new_user_session_path, class: "btn btn-outline btn-error btn-sm mr-4" %>
     <% end %>
